# wholebody_ik

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  config.rviz  empty.world  test.world  test_LH.world
app/conf/: bigman_config.ini
include/utils/: utils.h
include/wholebody_ik/: wholebody_ik.h
scripts/: parse_log.py  plot_log.m  test.eps
src/: math_utilities.cpp  utils.cpp  wholebody_ik.cpp
tests/: com_ik_test.cpp  limbs_ik_test.cpp  multicontact_test.cpp  prova.cpp  visual_utils.cpp  wholebody_ik_test.cpp
tests/module/: wholebody_ik_module.hpp  wholebody_ik_module_main.cpp  wholebody_ik_module_thread.cpp  wholebody_ik_module_thread.h
tests/wb_module/: wholebody_ik_wb_module.hpp  wholebody_ik_wb_module_main.cpp  wholebody_ik_wb_module_thread.cpp  wholebody_ik_wb_module_thread.h
